Actualización para meter rutas

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,12 @@
+
+
+
+<app-bienvenido></app-bienvenido>
+
+
+<!--
+
 <div><h1>{{title}}</h1></div>
-
-
 <app-personas-output></app-personas-output>
 <app-messages></app-messages>
+-->
