Ejercicio con formato de tabla incluido

--- a/src/app/bienvenido/bienvenido.component.html
+++ b/src/app/bienvenido/bienvenido.component.html
@@ -1,1 +1,6 @@
-<h1>Bienvenido al mantenimiento de personas</h1>
+<div>
+    <app-menu></app-menu>
+    <h1 class="centro">Bienvenido al mantenimiento de personas</h1>
+</div>
+
+
