--- a/src/app/personas-output/personas-output.component.html
+++ b/src/app/personas-output/personas-output.component.html
@@ -1,3 +1,7 @@
+<div class="contenedor">
+
+<app-menu></app-menu>
+
 <div class="contenedor_personas_output">
 
 <button (click)="anadir()">Añadir</button>
@@ -60,6 +64,7 @@
       <tr mat-row *matRowDef="let row; columns: columnsToDisplay;"></tr>
 </table>
 
+</div>
 </div>
 
 <!--
