--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,10 @@
 div{
-    text-align: center;
     width:60em;
     margin: 0 auto;
+}
+
+app-menu{
+    width: 100%;
+    text-align: left;
+    
 }
