Añadidos un par de modulos con lazy loading

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -12,5 +12,21 @@
       <mat-icon>voicemail</mat-icon>
       <span>Listar formato detalle</span>
     </button>
+
+    <button routerLink="/customers"  mat-menu-item>
+      <mat-icon>voicemail</mat-icon>
+      <span>Ir a customers lazy</span>
+    </button>
+
+    <button routerLink="/orders"  mat-menu-item>
+      <mat-icon>voicemail</mat-icon>
+      <span>Ir a orders lazy</span>
+    </button>
+
+    <!-- Asi salen los botones en el menu: -->
+    <!--
+    <button routerLink="/customers">Customers</button>
+    <button routerLink="/orders">Orders</button>
+    -->
   </mat-menu>
 </div>
