Añadido buscar nombre en el front

--- a/src/app/rectangle-person/rectangle-person.component.html
+++ b/src/app/rectangle-person/rectangle-person.component.html
@@ -4,8 +4,9 @@
 <p>{{persona.surname}}</p>
 <p><img src="{{persona.imagen_url}}"/></p>
 <p>{{persona.company_email}}</p>
-<p><strong>Ciudad de nacimiento: </strong>{{persona.city}}</p>
-<p><strong>Fecha de nacimiento: </strong>{{persona.created_date}}</p>
+<p><strong>Ciudad de nacimiento: </strong>{{persona.city | capitalizepipe}}</p>
+<p><strong>Fecha de nacimiento: </strong>{{persona.created_date }}</p>
+<!--<p><strong>Fecha de nacimiento: </strong>{{2 | currency:'INR'}}</p> simbolo de moneda   -->
 <p>
     <button class="boton" (click)="editar()"><strong>Editar</strong></button>
     <button class="boton" (click)="borrar()"><strong>Borrar</strong></button>
