--- a/src/app/personas-output/personas-output.component.html
+++ b/src/app/personas-output/personas-output.component.html
@@ -2,6 +2,8 @@
 
 <app-menu></app-menu>
 
+<app-filtro-front (changed)="filter($event)" ></app-filtro-front>
+
 <div class="contenedor_personas_output">
 
 <button (click)="anadir()">Añadir</button>
@@ -25,8 +27,8 @@
 <!--<table mat-table  [dataSource]="personas" id="tablaDatos">-->
   <table mat-table  [dataSource]="dataSource" id="tablaDatos">
  
-    <ng-container matColumnDef="user">
-        <th mat-header-cell *matHeaderCellDef> Usuario </th>
+    <ng-container matColumnDef="user" >
+        <th mat-header-cell *matHeaderCellDef (click)="alerta('usuario')"> Usuario </th>
         <td mat-cell *matCellDef="let personas"> {{personas.user}} </td>
       </ng-container>
 
