Preparado para 2 fuentes de datos

--- a/src/app/filtro-front/filtro-front.component.html
+++ b/src/app/filtro-front/filtro-front.component.html
@@ -1,5 +1,26 @@
 
 <div class="centrado">
+
+    
+        
+          <mat-form-field appearance="fill" class="entrada">
+            <mat-label>Mete un nombre</mat-label>
+            <input matInput id="aBuscar2" name="name">
+          </mat-form-field>
+          <!--
+          <button mat-raised-button (click)="buscar()">Buscar por nombre</button>
+          -->
+
+            <button mat-fab color="primary" aria-label="Buscar" (click)="buscar()">
+              <mat-icon>find_in_page</mat-icon>
+            </button>
+
+       
+      
+      
+
+      <!--
     <input type="text" id="aBuscar2" name="name"  size="20" />
     <button (click)="buscar()">Buscar por nombre</button>
+      -->
 </div>
